tests/NormalTests/paczka1/small_fuzzy/67305120.err
Error in line 5: 0LnUlnf A55 63,7
Error in line 9: yWdw6a A834 44,3
Error in line 8: 0LnUlnf A834 98,1
